--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>1.0-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <properties>
-    <scala.version>2.11.0</scala.version>
+    <scala.version>2.11.8</scala.version>
   </properties>
 
   <repositories>
@@ -48,6 +48,11 @@
       <version>1.2.5</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.typelevel</groupId>
+          <artifactId>cats-core_2.11</artifactId>
+          <version>0.4.0</version>
+      </dependency>
   </dependencies>
 
   <build>
